tests/errors/sem_call4.java
public class sem_call4 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(3 , 10 , s);
}
}